# business-search-agent

./: .gitignore  DEPLOYMENT_COMPLETE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  ci.yml.disabled  simple-ci.yml
examples/: advanced_chinese_usage.py  basic_usage.py
src/business_search_agent/: __init__.py  agent.py  chinese_web_extractor.py  config.py  hybrid_agent.py  metrics.py  utils.py
tests/: test_basic.py
